--- a/event.html
+++ b/event.html
@@ -87,10 +87,7 @@
           <h2>01</h2>
           <h3> 𝐏𝐫𝐞𝐳𝐞𝐧𝐭𝐚𝐫𝐞 :</h3>
           <p>
-            It is an individual sports event in which participants must face the
-            bowling of balling machine. Depending on registration fees, they can
-            participate for 1 over or 2 overS. This event will be organized at
-            volleyball ground. This event will start from 11 o’ clock.
+            A paper presentation is an oral presentation reserved for completed projects for which results are reported as part of the presentation. Each paper presentation will be a maximum of 8 minutes in length and will be followed by a brief question and answer period of approximately 3 minutes.
           </p>
           <a href="events/netcricket.html">
             <button>Read more</button>
@@ -100,11 +97,8 @@
           <h2>02</h2>
           <h3>𝐈𝐝𝐞𝐚 𝐦𝐨𝐝𝐞𝐥𝐥𝐢𝐱 :</h3>
           <p>
-            This event is an individual event. In this technical event
-            Participants have to create a plan- an elevation and the section for
-            a given diagram to pick in a particular scale. The event helps
-            students to understand and innovate themselves in the perspective of
-            AutoCAD.
+            The presentation model specifies the structure and graphical components of displays, how the components are connected to application data, the visual appearance of each component, and how the components are laid out.
+            the presentation should be 15 minutes long with 5 minutes for questions afterward. Maximum number of participants is Three.
           </p>
           <a href="events/Autocad-Master.html">
             <button>Read more</button>
@@ -114,13 +108,10 @@
           <h2>03</h2>
           <h3>𝐁𝐢𝐨𝐦𝐞𝐝 𝐇𝐮𝐧𝐭 :</h3>
           <p>
-            The aim of COSMO CLENCH is to find best minds for industry who are
-            able to learn and apply their robotic knowledge in front of others.
-            Participants will have the opportunity to showcase their innovative
-            bot which is able to travel over the entire arena and compete with
-            other team bots for prizes in front of a panel. The COSMO CLENCH is
-            open to all individuals with an interest in bot development,
-            regardless of their experience level.
+            
+            A Biomed hunt is a Technical quiz game using QR codes incorporates a scavenger hunt-style game.
+
+            
           </p>
           <a href="events/Cosmo_clench.html">
             <button>Read more</button>
