--- a/events/Cosmo_clench.html
+++ b/events/Cosmo_clench.html
@@ -63,7 +63,7 @@
             <div class="nav-container-2">
                 <!--Title-->
                 <a href="../index.html">
-                    <p>PRAJWALAN</p>
+                    <p>Med Maniac-2K24</p>
                 </a>
             </div>
 
@@ -80,16 +80,16 @@
         <body>
             <div class="event-card">
                 <div class="event-left">
-                    <img src="../images/event-logos/Cosmo_clench.jpg" alt="" class="event-image" />
+                    <img src="../images/med hunt.png" alt="" class="event-image" />
                 </div>
                 <div class="event-right" >
-                    <h1>Cosmo Clench</h1>
-                    <p>
+                    <h1>𝐁𝐢𝐨𝐦𝐞𝐝 𝐇𝐮𝐧𝐭</h1>
+                    <!-- <p>
                         The aim of COSMO CLENCH is to find best minds for industry who are able to learn and apply their robotic knowledge in front of others. <br><br>
                         1.   Participants will have the opportunity to showcase their innovative bot which is able to travel over the entire areena and compete with other team bots for prizes in front of a panel. <br><br>
                         2.  The COSMO CLENCH  is open  to all individuals with an  interest in bot development, regardless of  their experience  level.<br>
 
-                    </p>
+                    </p> -->
                     <!-- <p>In Paintball fun war game there will be some amount of
                         entry fees for playes and it will be organise on both
                         days of 'PRAJWALAN' and as it is a type of fun game so
@@ -111,17 +111,17 @@
                         the participant will be responsible for it and will
                         compensate for it.
                     </p> -->
-                    <p style="margin-top: 20px;">For More Details <a
+                    <!-- <p style="margin-top: 20px;">For More Details <a
                             style="color: #ffbaff;"
                             href="https://docs.google.com/document/d/1d5_T9DrIW4KnihDfn_eZ-35SqBr9PjuQ/edit?usp=sharing&ouid=106789508280481670729&rtpof=true&sd=true"
-                            target="_blank">Click Here</a></p>
+                            target="_blank">Click Here</a></p> -->
                     <h2>Date of event</h2>
-                    <p>20 & 21 Feb 2023</p>
+                    <p> 22 Apr 2024</p>
                     <h2>Venue</h2>
-                    <p>CAD LAB and COMPUTER LAB located on the 1st floor of the mechanical department of GCOEA.</p>
+                    <p>Biomedical Engineering-Block</p>
                     <h2>Entry Fee: </h2>
-                    <p>50 RS for each participant.</p>
-                    <p>(If one team contains 4 participants then the entry fees will be 200 rs rupees)</p>
+                    <p>250/Head</p>
+                    <!-- <p>(If one team contains 4 participants then the entry fees will be 200 rs rupees)</p> -->
                     <a style="text-decoration: none; color: white;"
                         href="#"
                         target="_blank"><button>Register</button></a>
