--- a/events/netcricket.html
+++ b/events/netcricket.html
@@ -63,7 +63,7 @@
             <div class="nav-container-2">
                 <!--Title-->
                 <a href="../index.html">
-                    <p>PRAJWALAN</p>
+                    <p>Med Maniac-2K24</p>
                 </a>
             </div>
 
@@ -80,25 +80,28 @@
         <body>
             <div class="event-card">
                 <div class="event-left">
-                    <img src="../images/event-logos/netcricket.png" alt="" class="event-image" />
+                    <img src="../images/presanture.png" alt="" class="event-image" />
                 </div>
                 <div class="event-right" >
-                    <h1>Net Cricket</h1>
+                    <h1>𝐏𝐫𝐞𝐳𝐞𝐧𝐭𝐚𝐫𝐞</h1>
+                    <h5>Rules</h5>
                     <p>
-                        It is an individual sports event in which participants must face the bowling of balling machine. Depends on registration fees they can participate for 1 over or 2 over. This event will organize at volleyball ground. This event will start from 11 o’ clock.
+                        Team Size: Maximum 3 Members per team.
 
                     </p>
+
+                    
                     
                 <h2>Date of event</h2>
-                <p>20 & 21 Feb 2023</p>
+                <p> 22 Apr 2024</p>
                 <h2>Venue</h2>
-                <p>Government college of engineering, Amravati</p>
-                <h2>Entry Fee: Rs. 60 (1 Over)</h2>
-                <h2>Entry Fee: Rs. 100 (2 Over)</h2>
+                <p>Biomedical Engineering-Block</p>
+                <h2>Entry Fee: Rs. 250/Head</h2>
+                <!-- <h2>Entry Fee: Rs. 100 (2 Over)</h2> -->
 
                 <div style="text-align: center;">
                 <a style="text-decoration: none; color: white;"
-                    href="https://surveyheart.com/form/63e880d036e5e053418cc653"
+                    href="https://forms.gle/1Bo1XQg7nCxu123i7"
                     target="_blank"><button>Register</button></a>
                 </div>
             </div>
@@ -120,10 +123,11 @@
                         <h4>Address</h4>
                         <!--Column heading  -->
 
-                        <p>Government College of Engineering</p>
-                        <p>Kathora Naka, Amravati</p>
-                        <p>Pin-444604</p>
-                        <p><a href="#" class="gcoea-website">www.gcoea.ac.in</a></p>
+                        <p>Erode Sengunthar Engineering College,</p>
+                        <p>Thudupati,</p>
+                        <p>Perundurai,</p>
+                        <p>Erode-638057.</p>
+                        <p><a href="https://erode-sengunthar.ac.in/bme-aboutus/" class="gcoea-website">www.bme.ac.in</a></p>
                         <!-- Gcoea Website -->
                     </div>
 
