--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
       src="https://kit.fontawesome.com/0b62b37b15.js"
       crossorigin="anonymous"
     ></script>
+    <style>
+      .esec-logo {
+        margin-top: 65px;
+      }
+    </style>
   </head>
   <body>
     <!--Navbar-->
@@ -42,7 +47,8 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="event.html">Events</a></li>
-          <li><a href="reg.html">Register</a></li>
+          <li><a href="event.html">Register</a></li>
+          <!-- <li><a href="contact.html">Contact Us</a></li> -->
         </ul>
       </div>
 
@@ -57,7 +63,7 @@
       <div class="nav-container-2">
         <!--Title-->
         <a href="#">
-          <p>Med Maniac-2K24</p>
+          <p>MedManiac</p>
         </a>
       </div>
 
@@ -66,7 +72,7 @@
         <div class="nav-container-3">
           <ul>
             <li><a href="event.html">Events</a></li>
-            <li><a href="reg.html">Register</a></li>
+            <li><a href="event.html">Register</a></li>
           </ul>
         </div>
       </div>
@@ -75,16 +81,28 @@
     <!--Homepage-->
     <div class="banner">
       <div class="content1">
-
+        <!-- <p> -->
+        <img
+          src="./images/ESEC_Logo.jpg"
+          width="60"
+          height="60"
+          alt="esec logo"
+          class="esec-logo"
+        />
+        <!-- </p> -->
+        <p><i>ERODE SENGUNTHAR ENGINEERING COLLEGE</i></p>
         <img src="./images/prajwalan.jpg" height="290" class="logo" />
         <p>
-          <i>WELCOME TO <b>Med Maniac</b> 2023-2024 ORGANISED BY BIOMEDICAL DEPARTMENT</i>
+          <i
+            >WELCOME TO <b>MED MANIAC-2K24</b> 2023-2024 ORGANISED BY BIOMEDICAL
+            DEPARTMENT</i
+          >
           <br />
         </p>
         <div>
-          <a href="reg.html">
-          <button type="button"><span></span> REGISTER NOW</button>
-        </a>
+          <a href="event.html">
+            <button type="button"><span></span> REGISTER NOW</button>
+          </a>
         </div>
       </div>
     </div>
@@ -109,7 +127,13 @@
             <p>Thudupati,</p>
             <p>Perundurai,</p>
             <p>Erode-638057.</p>
-            <p><a href="https://erode-sengunthar.ac.in/bme-aboutus/" class="gcoea-website">www.bme.ac.in</a></p>
+            <p>
+              <a
+                href="https://erode-sengunthar.ac.in/bme-aboutus/"
+                class="gcoea-website"
+                >www.bme.ac.in</a
+              >
+            </p>
             <!-- Gcoea Website -->
           </div>
 
@@ -121,7 +145,7 @@
               <li><a href="#">FAQs</a></li>
               <li><a href="#">Home</a></li>
               <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Register</a></li>
+              <li><a href="event.html">Register</a></li>
             </ul>
           </div>
 
@@ -131,10 +155,19 @@
             <!--column heading  -->
 
             <div class="social-links">
-              <a href="https://www.facebook.com/esecindia/"><i class="fa-brands fa-facebook"></i></a>
-              <a href="https://www.instagram.com/esectv/?next=%2Fnattycarib%2Ffeed%2F&hl=ja"><i class="fa-brands fa-instagram"></i></a>
-              <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fesec_india"><i class="fa-brands fa-twitter"></i></a>
-              <a href="https://www.youtube.com/channel/UC1PrDF3sVF9F8zTwoAsr40A"><i class="fa-brands fa-youtube"></i></a>
+              <a href="https://www.facebook.com/esecindia/"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              <a href="https://www.instagram.com/esecindia/?hl=en"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a
+                href="https://twitter.com/i/flow/login?redirect_after_login=%2Fesec_india"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a href="https://www.youtube.com/channel/UC1PrDF3sVF9F8zTwoAsr40A"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
             </div>
           </div>
         </div>
