--- a/events/cad-mania.html
+++ b/events/cad-mania.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EVENTS</title>
+    <title>𝐏𝐫𝐞𝐜𝐢𝐬𝐢𝐨𝐧 𝐂𝐚𝐫𝐯𝐢𝐧𝐠</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -50,7 +50,7 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="#">Sponsors</a></li>
           <li><a href="../event.html">Events</a></li>
-          <li><a href="../reg.html">Register</a></li>
+          <li><a href="#prr">Register</a></li>
         </ul>
       </div>
 
@@ -65,7 +65,7 @@
       <div class="nav-container-2">
         <!--Title-->
         <a href="../index.html">
-          <p>PRAJWALAN</p>
+          <p>MedManiac</p>
         </a>
       </div>
 
@@ -74,7 +74,7 @@
         <div class="nav-container-3">
           <ul>
             <li><a href="../event.html">Events</a></li>
-            <li><a href="../reg.html">Register</a></li>
+            <li><a href="#prr">Register</a></li>
           </ul>
         </div>
       </div>
@@ -82,30 +82,23 @@
     <body>
       <div class="event-card">
         <div class="event-left">
-          <img src="../images/event-logos/cadmania.png" alt="" class="event-image" />
+          <img src="../images/precision.png" alt="" class="event-image" />
         </div>
         <div class="event-right">
-          <h1>CAD MANIA</h1>
-          <p>
-            CAD MANIA event consists of 2 rounds. Round 1 will be of "
-            creativity”. Round 2 will include how the creative minds work on a
-            given model in a given timeline I.e. "Judgement of Designing skills
-            ”. The whole event will be held on SOLIDWORKS CAD software.
-            Participants will have to bring their own laptops** If any
-            Participant does not have a laptop then it will be provided by us.
-          </p>
-          <h2>Rules</h2>
-          <p>
-            There will be a time frame in which you need to complete the coding
-            question. You can choose any programming language of your choice
-          </p>
+          <
+          <h1>𝐏𝐫𝐞𝐜𝐢𝐬𝐢𝐨𝐧 𝐂𝐚𝐫𝐯𝐢𝐧𝐠</h1>
+          <!-- <h5>Rules</h5> -->
+
           <h2>Date of event</h2>
-          <p>20 & 21 Feb 2023</p>
+          <p>22 Apr 2024</p>
           <h2>Venue</h2>
-          <p>Government college of engineering, Amravati</p>
-          <h2>Entry Fee: Rs. 70/person</h2>
-          <a target="_blank" href="https://forms.gle/32mwp1KVkC5mo8q18"
-            ><button>Register</button></a
+          <p>Biomedical Engineering-Block</p>
+          <h2>Entry Fee: Rs. 250/Head</h2>
+          <p>Coordinator :</p>
+          <h2>Ms.JANANI V</h2>
+          <p>+91 9360404267</p>
+          <a target="_blank" href="https://forms.gle/BvAmJH9BGfyvuDuAA"
+            ><button id="prr">Register</button></a
           >
         </div>
       </div>
@@ -125,11 +118,18 @@
             <h4>Address</h4>
             <!--Column heading  -->
 
-            <p>Government College of Engineering</p>
-            <p>Kathora Naka, Amravati</p>
-            <p>Pin-444604</p>
-            <p><a href="#" class="gcoea-website">www.gcoea.ac.in</a></p>
-            <!-- Gcoea Website -->
+            <p>Erode Sengunthar Engineering College,</p>
+            <p>Thudupati,</p>
+            <p>Perundurai,</p>
+            <p>Erode-638057.</p>
+            <p>
+              <a
+                href="https://erode-sengunthar.ac.in/bme-aboutus/"
+                class="gcoea-website"
+                >www.bme.ac.in</a
+              >
+              <!-- Gcoea Website -->
+            </p>
           </div>
 
           <div class="footer-col">
