--- a/events/netcricket.html
+++ b/events/netcricket.html
@@ -1,162 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Paper Presentation</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>𝐏𝐫𝐞𝐳𝐞𝐧𝐭𝐚𝐫𝐞</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
    -->
-        <link
-            href="https://fonts.googleapis.com/css2?family=Laila:wght@700&display=swap"
-            rel="stylesheet"
-            />
-        <link rel="stylesheet" href="../navbar.css" />
-        <link rel="stylesheet" href="../event.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Laila:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../navbar.css" />
+    <link rel="stylesheet" href="../event.css" />
 
-        <link
-            rel="stylesheet"
-            media="screen and (max-width:920px )"
-            href="../nav-responsive.css"
-            />
-        <link rel="stylesheet" href="../footer.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:920px )"
+      href="../nav-responsive.css"
+    />
+    <link rel="stylesheet" href="../footer.css" />
 
-        <!--link for css file-->
-        <script
-            src="https://kit.fontawesome.com/0b62b37b15.js"
-            crossorigin="anonymous"></script>
-        <!-- link for social media logo -->
-        <script
-            src="https://kit.fontawesome.com/0b62b37b15.js"
-            crossorigin="anonymous"></script>
-        <!-- <link rel="icon" href="../images/reg_ico.png"> -->
-        <link rel="stylesheet" href="../reg.css" />
-        <!-- <link rel="stylesheet" href="./event-name.css"> -->
-        <link rel="stylesheet" href="./event-name.css" />
-    </head>
+    <!--link for css file-->
+    <script
+      src="https://kit.fontawesome.com/0b62b37b15.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- link for social media logo -->
+    <script
+      src="https://kit.fontawesome.com/0b62b37b15.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- <link rel="icon" href="../images/reg_ico.png"> -->
+    <link rel="stylesheet" href="../reg.css" />
+    <!-- <link rel="stylesheet" href="./event-name.css"> -->
+    <link rel="stylesheet" href="./event-name.css" />
+  </head>
+  <body>
+    <nav class="navbar">
+      <input type="checkbox" id="active" />
+      <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
+      <!--menu button-->
+      <div class="wrapper">
+        <!--menu button content-->
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="#">Sponsors</a></li>
+          <li><a href="../event.html">Events</a></li>
+          <li><a href="#pr">Register</a></li>
+        </ul>
+      </div>
+
+      <div class="nav-container">
+        <!--navbar content1-->
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="#">Sponsors</a></li>
+        </ul>
+      </div>
+
+      <div class="nav-container-2">
+        <!--Title-->
+        <a href="../index.html">
+          <p>MedManiac</p>
+        </a>
+      </div>
+
+      <div class="nav-container-3">
+        <!--navbar content2-->
+        <div class="nav-container-3">
+          <ul>
+            <li><a href="../event.html">Events</a></li>
+            <li><a href="#pr">Register</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <body>
-        <nav class="navbar">
-            <input type="checkbox" id="active" />
-            <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
-            <!--menu button-->
-            <div class="wrapper">
-                <!--menu button content-->
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">Sponsors</a></li>
-                    <li><a href="../event.html">Events</a></li>
-                    <li><a href="../reg.html">Register</a></li>
-                </ul>
-            </div>
+      <div class="event-card">
+        <div class="event-left">
+          <img src="../images/presanture.png" alt="" class="event-image" />
+        </div>
+        <div class="event-right">
+          <h1>𝐏𝐫𝐞𝐳𝐞𝐧𝐭𝐚𝐫𝐞</h1>
+          <h5>Rules</h5>
+          <p>Team Size: Maximum 3 Members per team.</p>
 
-            <div class="nav-container">
-                <!--navbar content1-->
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">Sponsors</a></li>
-                </ul>
-            </div>
+          <h2>Date of event</h2>
+          <p>22 Apr 2024</p>
+          <h2>Venue</h2>
+          <p>Biomedical Engineering-Block</p>
+          <h2>Entry Fee: Rs. 250/Head</h2>
+          <p>Coordinator :</p>
+          <h2>Mr.SURESHKUMAR K</h2>
+          <p>+91 9486202717</p>
 
-            <div class="nav-container-2">
-                <!--Title-->
-                <a href="../index.html">
-                    <p>Med Maniac-2K24</p>
-                </a>
-            </div>
-
-            <div class="nav-container-3">
-                <!--navbar content2-->
-                <div class="nav-container-3">
-                    <ul>
-                        <li><a href="../event.html">Events</a></li>
-                        <li><a href="../reg.html">Register</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <body>
-            <div class="event-card">
-                <div class="event-left">
-                    <img src="../images/presanture.png" alt="" class="event-image" />
-                </div>
-                <div class="event-right" >
-                    <h1>𝐏𝐫𝐞𝐳𝐞𝐧𝐭𝐚𝐫𝐞</h1>
-                    <h5>Rules</h5>
-                    <p>
-                        Team Size: Maximum 3 Members per team.
-
-                    </p>
-
-                    
-                    
-                <h2>Date of event</h2>
-                <p> 22 Apr 2024</p>
-                <h2>Venue</h2>
-                <p>Biomedical Engineering-Block</p>
-                <h2>Entry Fee: Rs. 250/Head</h2>
-                <!-- <h2>Entry Fee: Rs. 100 (2 Over)</h2> -->
-
-                <div style="text-align: center;">
-                <a style="text-decoration: none; color: white;"
-                    href="https://forms.gle/1Bo1XQg7nCxu123i7"
-                    target="_blank"><button>Register</button></a>
-                </div>
-            </div>
-            </div>
-        </body>
-        <footer class="footer">
-            <div class="footer-container">
-                <!--Main container (main div)-->
-                <div class="footer-row">
-                    <div class="footer-col">
-                        <!--Column 01-->
-                        <img src="../prajwalan.png" alt="fg" class="footer-logo"
-                            />
-                        <!-- Prajwalan logo -->
-                    </div>
-
-                    <div class="footer-col">
-                        <!-- Column 02 -->
-                        <h4>Address</h4>
-                        <!--Column heading  -->
-
-                        <p>Erode Sengunthar Engineering College,</p>
-                        <p>Thudupati,</p>
-                        <p>Perundurai,</p>
-                        <p>Erode-638057.</p>
-                        <p><a href="https://erode-sengunthar.ac.in/bme-aboutus/" class="gcoea-website">www.bme.ac.in</a></p>
-                        <!-- Gcoea Website -->
-                    </div>
-
-                    <div class="footer-col">
-                        <!-- Column 03  -->
-                        <h4>Help</h4>
-                        <!-- Column heading -->
-                        <ul>
-                            <li><a href="#">FAQs</a></li>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Register</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="footer-col">
-                        <!-- Column 04 -->
-                        <h4>follow us</h4>
-                        <!--column heading  -->
-
-                        <div class="social-links">
-                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
+          <div style="text-align: center">
+            <a
+              style="text-decoration: none; color: white"
+              href="https://forms.gle/1Bo1XQg7nCxu123i7"
+              target="_blank"
+              ><button id="pr">Register</button></a
+            >
+          </div>
+        </div>
+      </div>
     </body>
+    <footer class="footer">
+      <div class="footer-container">
+        <!--Main container (main div)-->
+        <div class="footer-row">
+          <div class="footer-col">
+            <!--Column 01-->
+            <img src="../prajwalan.png" alt="fg" class="footer-logo" />
+            <!-- Prajwalan logo -->
+          </div>
+
+          <div class="footer-col">
+            <!-- Column 02 -->
+            <h4>Address</h4>
+            <!--Column heading  -->
+
+            <p>Erode Sengunthar Engineering College,</p>
+            <p>Thudupati,</p>
+            <p>Perundurai,</p>
+            <p>Erode-638057.</p>
+            <p>
+              <a
+                href="https://erode-sengunthar.ac.in/bme-aboutus/"
+                class="gcoea-website"
+                >www.bme.ac.in</a
+              >
+            </p>
+            <!-- Gcoea Website -->
+          </div>
+
+          <div class="footer-col">
+            <!-- Column 03  -->
+            <h4>Help</h4>
+            <!-- Column heading -->
+            <ul>
+              <li><a href="#">FAQs</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#pr">Register</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-col">
+            <!-- Column 04 -->
+            <h4>follow us</h4>
+            <!--column heading  -->
+
+            <div class="social-links">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
