--- a/events/death-rush.html
+++ b/events/death-rush.html
@@ -151,39 +151,54 @@
         <div class="footer-row">
           <div class="footer-col">
             <!--Column 01-->
-            <img src="../prajwalan.png" alt="fg" class="footer-logo" />
+            <img src="./prajwalan.png" alt="fg" class="footer-logo" />
             <!-- Prajwalan logo -->
           </div>
 
+
           <div class="footer-col">
             <!-- Column 02 -->
-            <h4>Address</h4>
+            <h4>Contact US</h4>
+            <!--Column heading  -->
+            <p>+91 9486202717</p>
+            <p>+91 9361986158</p>
+            <p><i><b>Mail💌</b></i></p>
+            <p>medmaniac2k24@gmail.com</p>
+            <p><i><b>Location✔</b></i></p>
+            <p>Erode Sengunthar Engineering College,
+              Thudupati,Perundurai,
+              <p>Erode-638057.</p>
+            </p>
+            <p></p>
+          </div>
+
+
+
+
+          <div class="footer-col">
+            <!-- Column 02 -->
+            <h4>Faculty Co-Ordinator</h4>
             <!--Column heading  -->
 
-            <p>Erode Sengunthar Engineering College,</p>
-            <p>Thudupati,</p>
-            <p>Perundurai,</p>
-            <p>Erode-638057.</p>
-            <p>
-              <a
-                href="https://erode-sengunthar.ac.in/bme-aboutus/"
-                class="gcoea-website"
-                >www.bme.ac.in</a
-              >
-              <!-- Gcoea Website -->
-            </p>
+            <p><b>Mrs.Dhivya M - (AP \ BME)</b></p>
+            <p>+91 7010463948</p>
+            <p><b>Mrs.Leka k.k - (AP \ BME)</b></p>
+            <p>+91 6379346746</p>
+            <!-- Gcoea Website -->
           </div>
 
           <div class="footer-col">
             <!-- Column 03  -->
-            <h4>Help</h4>
+            <h4>Developer</h4>
+            <p><b>Mr.Manikandan M - (IV \ B.E BME)</b></p><br/>
+            <h4>Student Co-Ordinator</h4>
+            <p><b>Mr.Harihara sudhan S</b></p>
+            <p><b>(President \ B.E BME)</b></p>
+            <p>+91 8248222700</p>
+            <p><b>Mr.Sureshkumar K-(IV \ B.E BME)</b></p>
+            <p>+91 9486202717</p>
             <!-- Column heading -->
-            <ul>
-              <li><a href="#">FAQs</a></li>
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Register</a></li>
-            </ul>
+
           </div>
 
           <div class="footer-col">
@@ -192,10 +207,19 @@
             <!--column heading  -->
 
             <div class="social-links">
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram"></i></a>
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
-              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+              <a href="https://www.facebook.com/esecindia/"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              <a href="https://www.instagram.com/esecindia/?hl=en"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a
+                href="https://twitter.com/i/flow/login?redirect_after_login=%2Fesec_india"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a href="https://www.youtube.com/channel/UC1PrDF3sVF9F8zTwoAsr40A"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
             </div>
           </div>
         </div>
