--- a/event.html
+++ b/event.html
@@ -73,7 +73,7 @@
         <div class="nav-container-3">
           <ul>
             <li><a href="#">Events</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="event.html">Register</a></li>
           </ul>
         </div>
       </div>
@@ -85,7 +85,7 @@
       <ul class="tilesWrap">
         <li>
           <h2>01</h2>
-          <h3>𝐏𝐫𝐞𝐳𝐞𝐧𝐭𝐚𝐫𝐞 :</h3>
+          <h3 style="color:rgba(236, 83, 78, 0.753);">𝐏𝐫𝐞𝐳𝐞𝐧𝐭𝐚𝐫𝐞 :</h3>
           <p>
             A paper presentation is an oral presentation reserved for completed
             projects for which results are reported as part of the presentation.
@@ -99,7 +99,7 @@
         </li>
         <li>
           <h2>02</h2>
-          <h3>𝐈𝐝𝐞𝐚 𝐦𝐨𝐝𝐞𝐥𝐥𝐢𝐱 :</h3>
+          <h3 style="color:rgba(236, 83, 78, 0.753);">𝐈𝐝𝐞𝐚 𝐦𝐨𝐝𝐞𝐥𝐥𝐢𝐱 :</h3>
           <p>
             The presentation model specifies the structure and graphical
             components of displays, how the components are connected to
@@ -113,8 +113,8 @@
           </a>
         </li>
         <li>
-          <h2>03</h2>
-          <h3>𝐁𝐢𝐨𝐦𝐞𝐝 𝐇𝐮𝐧𝐭 :</h3>
+          <h2 >03</h2>
+          <h3 style="color:rgba(236, 83, 78, 0.753);">𝐁𝐢𝐨𝐦𝐞𝐝 𝐇𝐮𝐧𝐭 :</h3>
           <p>
             A Biomed hunt is a Technical quiz game using QR codes incorporates a
             scavenger hunt-style game.
@@ -125,10 +125,11 @@
         </li>
         <div class="header">
           <h1 style="font-weight: bold">NON-TECH-EVENTS</h1>
+          <h3 style="color:aliceblue">( Only E - Certificate will be provided for Non Tech events )</h3>
         </div>
         <li>
           <h2>04</h2>
-          <h3>𝐏𝐫𝐞𝐜𝐢𝐬𝐢𝐨𝐧 𝐂𝐚𝐫𝐯𝐢𝐧𝐠 :</h3>
+          <h3 style="color:rgba(236, 83, 78, 0.753);">𝐏𝐫𝐞𝐜𝐢𝐬𝐢𝐨𝐧 𝐂𝐚𝐫𝐯𝐢𝐧𝐠 :</h3>
           <p>
             Precision carving is Vegetable carving is the art of carving
             vegetables to form beautiful objects, such as flowers or birds.
@@ -139,7 +140,7 @@
         </li>
         <li>
           <h2>05</h2>
-          <h3>𝐂𝐥𝐮𝐞 𝐐𝐮𝐞𝐬𝐭 :</h3>
+          <h3 style="color:rgba(236, 83, 78, 0.753);">𝐂𝐥𝐮𝐞 𝐐𝐮𝐞𝐬𝐭 :</h3>
           <p>It is a game based on clues like who am I ?</p>
           <a href="events/paper-presentation.html">
             <button>Read more</button>
@@ -147,7 +148,7 @@
         </li>
         <li>
           <h2>06</h2>
-          <h3>Talent Show :</h3>
+          <h3 style="color:rgba(236, 83, 78, 0.753);">Talent Show :</h3>
           <p>
             A talent show is an event in which participants perform the arts of
             singing, dancing, acting, playing an instrument, stand up comedy or
@@ -160,7 +161,8 @@
         <div class="header"><h1 style="font-weight: bold">WORK SHOP</h1></div>
         <li>
           <h2>07</h2>
-          <h3>"𝐂𝐚𝐥𝐢𝐛𝐫𝐚𝐭𝐢𝐨𝐧 𝐚𝐧𝐝 𝐭𝐫𝐨𝐮𝐛𝐥𝐞𝐬𝐡𝐨𝐨𝐭𝐢𝐧𝐠 𝐨𝐟 𝐁𝐢𝐨𝐦𝐞𝐝𝐢𝐜𝐚𝐥 𝐄𝐪𝐮𝐢𝐩𝐦𝐞𝐧𝐭𝐬 "</h3>
+          <h3 style="color:rgba(236, 83, 78, 0.753);">Title :</h3>
+          <p>"𝐂𝐚𝐥𝐢𝐛𝐫𝐚𝐭𝐢𝐨𝐧 𝐚𝐧𝐝 𝐭𝐫𝐨𝐮𝐛𝐥𝐞𝐬𝐡𝐨𝐨𝐭𝐢𝐧𝐠 𝐨𝐟 𝐁𝐢𝐨𝐦𝐞𝐝𝐢𝐜𝐚𝐥 𝐄𝐪𝐮𝐢𝐩𝐦𝐞𝐧𝐭𝐬 "</p>
           <p>
             <!-- The death rush is actually the competition between the robots. There
             will be an obstacle race in which various types of obstacles will be
@@ -369,7 +371,7 @@
         <div class="footer-row">
           <div class="footer-col">
             <!--Column 01-->
-            <img src="./prajwalan.png" alt="fg" class="footer-logo" />
+            <img src="./images/biomedic al.png" alt="fg" class="footer-logo" />
             <!-- Prajwalan logo -->
           </div>
 
@@ -428,7 +430,7 @@
               <a href="https://www.facebook.com/esecindia/"
                 ><i class="fa-brands fa-facebook"></i
               ></a>
-              <a href="https://www.instagram.com/esecindia/?hl=en"
+              <a href="https://www.instagram.com/medmaniac_2k24?igsh=ajJ6dmh6Y20wY2lz"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
               <a
