--- a/events/cad-mania.html
+++ b/events/cad-mania.html
@@ -109,7 +109,7 @@
         <div class="footer-row">
           <div class="footer-col">
             <!--Column 01-->
-            <img src="./prajwalan.png" alt="fg" class="footer-logo" />
+            <img src="../images/biomedic al.png" alt="fg" class="footer-logo" />
             <!-- Prajwalan logo -->
           </div>
 
@@ -168,7 +168,7 @@
               <a href="https://www.facebook.com/esecindia/"
                 ><i class="fa-brands fa-facebook"></i
               ></a>
-              <a href="https://www.instagram.com/esecindia/?hl=en"
+              <a href="https://www.instagram.com/medmaniac_2k24?igsh=ajJ6dmh6Y20wY2lz"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
               <a
