--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         />
         <!-- </p> -->
         <p><i>ERODE SENGUNTHAR ENGINEERING COLLEGE</i></p>
-        <img src="./images/prajwalan.jpg" height="290" class="logo" />
+        <img src="" height="290" class="logo" />
         <p>
           <i
             >WELCOME TO <b>MED MANIAC-2K24</b> 2023-2024 ORGANISED BY BIOMEDICAL
@@ -114,7 +114,7 @@
         <div class="footer-row">
           <div class="footer-col">
             <!--Column 01-->
-            <img src="./prajwalan.png" alt="fg" class="footer-logo" />
+            <img src="./images/biomedic al.png" alt="fg" class="footer-logo" />
             <!-- Prajwalan logo -->
           </div>
 
@@ -173,7 +173,7 @@
               <a href="https://www.facebook.com/esecindia/"
                 ><i class="fa-brands fa-facebook"></i
               ></a>
-              <a href="https://www.instagram.com/esecindia/?hl=en"
+              <a href="https://www.instagram.com/medmaniac_2k24?igsh=ajJ6dmh6Y20wY2lz"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
               <a
