--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         />
         <!-- </p> -->
         <p><i>ERODE SENGUNTHAR ENGINEERING COLLEGE</i></p>
-        <img src="" height="290" class="logo" />
+        <img src="./images/esec-logo.png" height="290" class="logo" />
         <p>
           <i
             >WELCOME TO <b>MED MANIAC-2K24</b> 2023-2024 ORGANISED BY BIOMEDICAL
