--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="content1">
         <!-- <p> -->
         <img
-          src="./images/ESEC_Logo.jpg"
+          src=""
           width="60"
           height="60"
           alt="esec logo"
