--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="content1">
         <!-- <p> -->
         <img
-          src=""
+          src="./images/ESEC_Logo.jpg"
           width="60"
           height="60"
           alt="esec logo"
@@ -91,7 +91,7 @@
         />
         <!-- </p> -->
         <p><i>ERODE SENGUNTHAR ENGINEERING COLLEGE</i></p>
-        <img src="./images/esec-logo.png" height="290" class="logo" />
+        <img src="" height="290" class="logo" />
         <p>
           <i
             >WELCOME TO <b>MED MANIAC-2K24</b> 2023-2024 ORGANISED BY BIOMEDICAL
