--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
       .esec-logo {
         margin-top: 65px;
       }
+      .medmaniac{
+  
+        display: inline-block;
+        position: relative;
+        font-family: Arial, sans-serif;
+        font-size: 24px; /* Adjust font size as needed */
+
+
+      }
+      .medmaniac span {
+        display: inline-block;
+        transition: transform 0.3s ease-out;
+      }
+
+      .medmaniac span:hover {
+        transform: scale(1.2); /* Increase the scale on hover */
+      }
     </style>
   </head>
   <body>
@@ -90,8 +107,8 @@
           class="esec-logo"
         />
         <!-- </p> -->
-        <p><i>ERODE SENGUNTHAR ENGINEERING COLLEGE</i></p>
-        <img src="" height="290" class="logo" />
+        <p><i>ERODE SENGUNTHAR ENGINEERING COLLEGE</i></p><br/>
+        <img src="./images/biomedic al.png" height="290" class="logo" />
         <p>
           <i
             >WELCOME TO <b>MED MANIAC-2K24</b> 2023-2024 ORGANISED BY BIOMEDICAL
