--- a/event.html
+++ b/event.html
@@ -125,7 +125,9 @@
         </li>
         <div class="header">
           <h1 style="font-weight: bold">NON-TECH-EVENTS</h1>
-          <h3 style="color:aliceblue">( Only E - Certificate will be provided for Non Tech events )</h3>
+          <h4 style="color:aliceblue">" Only E - Certificate will be provided</h4>
+          <h4 style="color:aliceblue"> for </h4>
+          <h4 style="color:aliceblue"> Non Tech events "</h4>
         </div>
         <li>
           <h2>04</h2>
