--- a/event.html
+++ b/event.html
@@ -445,6 +445,10 @@
             </div>
           </div>
         </div>
+        <br/>
+        <br/>
+        <div style="text-align: center;">Developed by <b>E & M Technologies</b></div>
+        <div style="text-align: center;"><p>All Rights Reserved &copy; ESEC</p></div>
       </div>
     </footer>
   </body>
