--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       .medmaniac span:hover {
         transform: scale(1.2); /* Increase the scale on hover */
       }
+    
     </style>
   </head>
   <body>
@@ -203,6 +204,10 @@
             </div>
           </div>
         </div>
+        <br/>
+        <br/>
+        <div style="text-align: center;">Developed by <b>E & M Technologies</b></div>
+        <div style="text-align: center;"><p>All Rights Reserved &copy; ESEC</p></div>
       </div>
     </footer>
   </body>
