--- a/events/paper-presentation.html
+++ b/events/paper-presentation.html
@@ -184,6 +184,9 @@
               <a href="https://www.youtube.com/channel/UC1PrDF3sVF9F8zTwoAsr40A"
                 ><i class="fa-brands fa-youtube"></i
               ></a>
+              <a href="https://chat.whatsapp.com/GNBnL1Yjo319y87SEL19pj" 
+              ><i class="fa-brands fa-whatsapp"></i
+            ></a>
             </div>
           </div>
         </div>
