--- a/events/cad-mania.html
+++ b/events/cad-mania.html
@@ -281,7 +281,7 @@
         </div>
         <br/>
         <br/>
-        <div style="text-align: center;">Developed by <b>E & M Technologies</b></div>
+        <!-- <div style="text-align: center;">Developed by <b>E & M Technologies</b></div> -->
         <div style="text-align: center;"><p>All Rights Reserved &copy; ESEC</p></div>
       </div>
     </footer>
