--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
       src="https://kit.fontawesome.com/0b62b37b15.js"
       crossorigin="anonymous"
     ></script>
+    <!-- ============================================= -->
+    <!-- <link rel="stylesheet" href="./event.css" /> -->
     <style>
+
+    
       .esec-logo {
         margin-top: 65px;
       }
@@ -187,7 +191,8 @@
         />
         <!-- </p> -->
         <p><i>ERODE SENGUNTHAR ENGINEERING COLLEGE</i></p><br/>
-        <img src="./images/biomedic al.png" height="290" class="logo" />
+        <div class="header"><h1 style="font-weight: bold">MEDMANIAC</h1></div>
+        
         <p>
           <i
             >WELCOME TO <b>MED MANIAC-2K24</b> 2023-2024 ORGANISED BY BIOMEDICAL
